feat(api): add PUT links/{id}/password
